wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: wordpress
  name: wordpress
  namespace: wordpress
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 80
  selector:
    app: wordpress
